fix: truncate user name in different views

--- a/src/app/home/components/game-over-dialog/game-over-dialog.component.scss
+++ b/src/app/home/components/game-over-dialog/game-over-dialog.component.scss
@@ -39,5 +39,10 @@
 .highscores {
     &__score {
         margin: 0;
+        min-width: 0;
+
+        &-value {
+            margin: 0;
+        }
     }
 }
